@@ -1,3 +1,5 @@
+- partitioning wizard: ensure existing_part and resize_fat are proposed before
+  wipe_drive
 - in case of ftp/http media, we select basesystem before doing
   bestKernelPackage so we must ensure the choice callback selects the good
   kernel (reported by Thomas Spuhler on cooker mailing list)
